--- a/templates/default/postgresql.conf.erb
+++ b/templates/default/postgresql.conf.erb
@@ -11,4 +11,4 @@ lc_numeric = 'en_US.UTF-8'
 lc_time = 'en_US.UTF-8'
 default_text_search_config = 'pg_catalog.english'
 log_line_prefix = '%t [%p] %u@%d '
-data_directory = '<%= node['postgresql']['data_dir'] %>'
+data_directory = '<%= node['postgres']['data_dir'] %>'
